--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,3 @@
-- name: Install Requirements
-  run:  pip install flask flask-wtf
-
 name: DevOpsLab Pipeline  # Este é o nome do workflow
 # Evento que irá acionar a pipeline
 on:
@@ -10,6 +7,7 @@ on:
 
 jobs:
   Build:
+    name: Build  # Nome do trabalho "Build"
     runs-on: ubuntu-latest
     steps:
       - name: Download do Repositório
