--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-- name: Install Requirements
-       run:  pip install flask flask-wtf
-flask-wtf
-flask==2.2.5
-flask-wtf
+flask
 gunicorn
+flask-wtf
